--- a/Social/Views/Posts/Index.cshtml
+++ b/Social/Views/Posts/Index.cshtml
@@ -48,7 +48,7 @@
                         </a>
                     </span>
 
-                    <a class="block link" style="margin-top: 12px; margin-bottom: 0px;" href="/Posts/@post.ID"><i class="fas fa-comments"></i> Comments</a>
+                    <a class="block link" style="margin-top: 12px; margin-bottom: 0px;" href="/Posts/Details/@post.ID"><i class="fas fa-comments"></i> Comments</a>
                 </div>
             </div>
         }
