Youtube links working and username linked to post

--- a/Social/Views/Posts/Index.cshtml
+++ b/Social/Views/Posts/Index.cshtml
@@ -27,6 +27,9 @@
                             @post.Title
                         }
                     </h3>
+                    <h5>
+                        Submitted by <a href="/Users/@post.AuthorID">PLACEHOLDER USER</a>
+                    </h5>
                 </div>
                 <div class="card-opener" data-id="@post.ID">
                     <span class="card-opener-text">View More</span> <i class="fas fa-caret-down"></i>
