--- a/Social/Views/Posts/Details.cshtml
+++ b/Social/Views/Posts/Details.cshtml
@@ -18,7 +18,7 @@
             {
                 <h2>@Model.Title</h2>
             }
-            <em>Submitted by <a href="/Users/@Model.AuthorID">@ViewBag.AuthorName</a></em>
+            <em>Submitted by <a href="/Users/Details/@Model.AuthorID">@ViewBag.AuthorName</a></em>
         </div>
         <div class="card-body">
             <p>@Model.Content</p>
