--- a/Social/Views/Posts/Create.cshtml
+++ b/Social/Views/Posts/Create.cshtml
@@ -10,8 +10,7 @@
         @Html.AntiForgeryToken()
 
         <div>
-            <h4>Post</h4>
-            <hr />
+            <h2>Create Post</h2>
             @Html.ValidationSummary(true, "", new { @class = "error-message" })
             <div>
                 @Html.LabelFor(model => model.Title)
@@ -44,11 +43,6 @@
     }
 </div>
 
-
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
