--- a/Social/Views/Posts/Index.cshtml
+++ b/Social/Views/Posts/Index.cshtml
@@ -5,15 +5,29 @@
 }
 
 <div class="container">
-    
+
     @Html.ActionLink("Create New", "Create", null, new { @class = "btn" })
-    
+
     @{
         foreach (var post in Model)
         {
             <div class="fluid card">
                 <div class="card-header">
                     <div class="card-thumbnail">
+                        @switch (post.LinkType)
+                        {
+                            case "Image":
+                                <img class="fluid image" src="@post.Link">
+                                break;
+                            case "Video":
+                                <video class="fluid video" width="100%">
+                                    <source src="@post.Link">
+                                </video>
+                                break;
+                            case "Youtube":
+                                <i class="fab fa-youtube-square"></i>
+                                break;
+                        }
                     </div>
                     <h3>
                         @if (!String.IsNullOrEmpty(post.Link))
@@ -57,13 +71,13 @@
                 </div>
                 <div class="card-footer">
                     <span class="likes">
-                        <a id="l">
+                        <a id="l-@post.ID">
                             <i class="fas fa-thumbs-up"></i>
                             <text>@post.Likes</text>
                         </a>
                     </span>
                     <span class="dislikes">
-                        <a id="d">
+                        <a id="d-@post.ID">
                             <i class="fas fa-thumbs-down"></i>
                             <text>@post.Dislikes</text>
                         </a>
