--- a/Social/Content/Site.css
+++ b/Social/Content/Site.css
@@ -95,7 +95,7 @@ body {
 }
 
 .card-header {
-    padding: 20px;
+    padding: 10px;
 }
 
 .condensed-card .card-header {
@@ -133,6 +133,7 @@ body {
 
 .card-body .image, .card-body .video {
     width: 100%;
+    max-width: 33%;
 }
 
 .card-footer {
@@ -180,7 +181,7 @@ body {
     position: relative;
     width: 100%;
     height: 0;
-    padding-top: 66.6%; /* aspect ratio */
+    padding-top: 66.66%; /* aspect ratio */
 }
 
 .yt-video {
@@ -196,10 +197,6 @@ body {
 @media screen and (min-width: 1024px) {
     .card-thumbnail {
         display: inline-block;
-    }
-
-    .card-header {
-        padding: 10px;
     }
 
         .card-header h3 {
@@ -220,10 +217,7 @@ body {
 
     .card-body .image, .card-body .video {
         width: auto;
-    }
-
-    .card-footer {
-        padding: 20px;
+        max-width: 33%;
     }
 
     .card-opener {
@@ -243,6 +237,7 @@ body {
 
     .yt-video-box {
         width: 60%;
+        padding-top: 33.33%;
     }
 }
 
