--- a/Social/Views/Posts/Details.cshtml
+++ b/Social/Views/Posts/Details.cshtml
@@ -50,7 +50,7 @@
         {
             @Html.AntiForgeryToken()
             <div class="field">
-                <input type="text" id="content" name="content" placeholder="Comment">
+                <input type="text" id="content" name="content" placeholder="Comment" required>
             </div>
             <div class="field">
                 <button class="green btn">
