--- a/Social/Views/Posts/Index.cshtml
+++ b/Social/Views/Posts/Index.cshtml
@@ -1,13 +1,10 @@
-﻿@model IEnumerable<Social.Post>
+﻿@model IEnumerable<Social.Models.PostModel>
 
 @{
     ViewBag.Title = "Index";
 }
 
 <div class="container">
-
-    @Html.ActionLink("Create New", "Create", null, new { @class = "btn" })
-
     @{
         foreach (var post in Model)
         {
@@ -42,7 +39,7 @@
                         }
                     </h3>
                     <h5>
-                        Submitted by <a href="/Users/Details/@post.AuthorID">@post.AuthorName</a>
+                        Submitted by <a href="@Url.Action("Details", "Users", new { name = post.AuthorName })">@post.AuthorName</a>
                     </h5>
                 </div>
                 @if (post.LinkType != "default" || !String.IsNullOrEmpty(post.Content))
@@ -82,7 +79,7 @@
                     <span class="dislikes">
                         <a id="d-@post.ID">
                             <i class="fas fa-thumbs-down"></i>
-                            <text>@post.Dislikes</text>
+                            <text>N/A</text>
                         </a>
                     </span>
 
