Removed unnecessary files

--- a/Social/Views/Shared/_Layout.cshtml
+++ b/Social/Views/Shared/_Layout.cshtml
@@ -1,84 +1,29 @@
-﻿@using Microsoft.AspNet.Identity;
-@using System.Security.Claims;
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" 
+          href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
+          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+          crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css">
     <title>Social Media</title>
 </head>
 
-<body>
-    @if (ClaimsPrincipal.Current.Identity.IsAuthenticated)
-    {
-        <div style="display:none;" id="user-id" data-id="@User.Identity.GetUserId()"></div>
-    }
+<body>    
     <div class="navbar">
         <a id="btn-home" href="/" class="menu-item">
             <i class="fas fa-home"></i> Home
-        </a>
-        @if (ClaimsPrincipal.Current.Identity.IsAuthenticated)
-        {
-            <div class="right">
-                <a class="menu-item" href="/Users/Details/@User.Identity.GetUserId()">My Profile</a>
-                <form class="hidden-form" action="/Account/LogOff" method="post">
-                    @Html.AntiForgeryToken()
-                    <button class="logout-btn menu-item" id="btn-logout">
-                        <i class="fas fa-sign-out-alt"></i> Logout
-                    </button>
-                </form>
-
-            </div>
-        }
-        else
-        {
-            <div class="right menu">
-                <a id="btn-login" href='@Url.Action("Login", "Account")' class="menu-item">
-                    <i class="fas fa-sign-in-alt"></i> Login
-                </a>
-                <a id="btn-register" href='@Url.Action("Register", "Account")' class="menu-item">
-                    <i class="fas fa-user-plus"></i> Sign Up
-                </a>
-            </div>
-        }
-    </div>
-    <div class="container">
-        @if (ViewBag.SuccessMessage != null && ViewBag.SuccessMessage.Length > 0)
-        {
-            <div class="success-message">
-                <i class="close-btn right fas fa-times"></i>
-                <div class="header">
-                    <%= success %>
-                </div>
-            </div>
-        }
-        else if (ViewBag.ErrorMessage != null && ViewBag.ErrorMessage.Length > 0)
-        {
-            <div class="error-message">
-                <i class="close-btn right fas fa-times"></i>
-                <div class="header">
-                    <%= error %>
-                </div>
-            </div>
-        }
+        </a>        
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script>
-        $(".close-btn").on("click", function () {
-            $(this).parent().remove();
-        });
-    </script>
     @RenderBody()
-
-
 </body>
 </html>
 
